--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,9 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  charcode: ^1.3.1
+  quiver: ^3.2.1
+  timezone: ^0.9.2
   # path: ^1.8.0
 
 dev_dependencies:
